// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-1838224619 sans-serif "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-1838224619 sans-serif "
>
  <b>
    #content
  </b>
</main>
`;
